--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     environment:
       PHP_IDE_CONFIG: serverName=Docker
       PHP_XDEBUG_ENABLED: 1
-      XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9005 # MacOS users
+      XDEBUG_CONFIG: remote_host=host.docker.internal remote_port=9003 XDEBUG_CLIENT_HOST=host.docker.internal XDEBUG_CLIENT_PORT=9003
     volumes:
       - ./:/var/www
       - ./docker/php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
