--- a/docker/php/xdebug.ini
+++ b/docker/php/xdebug.ini
@@ -1,4 +1,5 @@
 xdebug.mode=develop,debug,coverage
 xdebug.start_with_request=yes
-xdebug.client_host=${XDEBUG_CLIENT_HOST}
-xdebug.client_port=${XDEBUG_CLIENT_PORT}
+xdebug.client_host=host.docker.internal
+xdebug.client_port=9003
+xdebug.log=/tmp/xdebug.log
